# rag-showcase-backend

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
alembic/: env.py
docs/: development.md  testing.md
src/: config.py  database.py  main.py
src/api/: deps.py
tests/: conftest.py  test_app.py  test_health.py
